<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductActivity">

    <ScrollView
        android:id="@+id/productScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center"
        android:fillViewport="true">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/macbook"
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/macbook_air" />

            <TextView
                android:id="@+id/macbookText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginTop="40dp"
                android:text="@string/macbookText"
                android:textAlignment="center"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/airpodsMax"
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:layout_row="2"
                android:layout_column="0"
                app:srcCompat="@drawable/airpods_max" />

            <TextView
                android:id="@+id/airpodsMaxText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_marginTop="20dp"
                android:text="@string/airpodsMaxText"
                android:textAlignment="center"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ipad"
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:layout_row="3"
                android:layout_column="0"
                app:srcCompat="@drawable/ipad_pro_11" />

            <TextView
                android:id="@+id/iPadText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_marginTop="20dp"
                android:text="@string/iPadText"
                android:textAlignment="center"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/iphone"
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:layout_row="4"
                android:layout_column="0"
                app:srcCompat="@drawable/iphone14" />

            <TextView
                android:id="@+id/iPhoneText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_marginTop="20dp"
                android:text="@string/iPhoneText"
                android:textAlignment="center"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/watch"
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:layout_row="5"
                android:layout_column="0"
                app:srcCompat="@drawable/watch_ultra" />

            <TextView
                android:id="@+id/watchText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="1"
                android:layout_marginTop="20dp"
                android:text="@string/watchText"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="6"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:text="회원정보" />

        </GridLayout>

    </ScrollView>

</GridLayout>